<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.eksioglu.faruk.elementler.elements.FilterButton
        android:id="@+id/main_allButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="filterButtonClick"
        android:text="@string/all"
        app:layout_constraintBottom_toBottomOf="@+id/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filter" />

    <View
        android:id="@+id/divider4"
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_marginStart="6dp"
        android:background="@drawable/all_button_divider"
        app:layout_constraintBottom_toBottomOf="@+id/main_allButton"
        app:layout_constraintStart_toEndOf="@+id/main_allButton"
        app:layout_constraintTop_toTopOf="@+id/main_allButton" />

    <HorizontalScrollView
        android:id="@+id/filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="8dp"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider4"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/main_filter_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp">

            <com.eksioglu.faruk.elementler.elements.FilterButton
                android:id="@+id/main_fitter_metals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="filterButtonClick"
                android:text="@string/metal" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/colorAccent" />

            <com.eksioglu.faruk.elementler.elements.FilterButton
                android:id="@+id/main_fitter_gecismetal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="filterButtonClick"
                android:text="@string/transition_metals" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/colorAccent" />

            <com.eksioglu.faruk.elementler.elements.FilterButton
                android:id="@+id/main_fitter_ametals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="filterButtonClick"
                android:text="@string/nonmetal" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/colorAccent" />

            <com.eksioglu.faruk.elementler.elements.FilterButton
                android:id="@+id/main_fitter_yarimetals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="filterButtonClick"
                android:text="@string/metalloid" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/colorAccent" />

            <com.eksioglu.faruk.elementler.elements.FilterButton
                android:id="@+id/main_fitter_soygaz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="filterButtonClick"
                android:text="@string/noble_gas" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/colorAccent" />

            <com.eksioglu.faruk.elementler.elements.FilterButton
                android:id="@+id/main_fitter_lantinit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="filterButtonClick"
                android:text="@string/lanthanoid" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/colorAccent" />

            <com.eksioglu.faruk.elementler.elements.FilterButton
                android:id="@+id/main_fitter_aktinit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="filterButtonClick"
                android:text="@string/actinoid" />
        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/main_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <LinearLayout
            android:id="@+id/main_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/mainActivty_table_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/table_image" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/colorAccent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/mainActivity_titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/mainActivity_settingsButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/info" />

</android.support.constraint.ConstraintLayout>